@@ -143,7 +143,7 @@ extern void lcd_hook(void)
 			lcd_planes[2] = tmp;
 		}
 
-#if 1
+#if 0
 		printf("%06x-%06x-%06x\n", lcd_planes[0], lcd_planes[1], lcd_planes[2]);
 		//printf("%1.1f/%1.1f %i\n", round(fir), fir, c);				 
 		//for(i = 0; i < 8; i++)	printf("%06x ", lcd_addrs[i]); printf("\n");
